tests/snapshots/run_wpt_conformance__trtx_reduceL2_float32_4D_tensor_options_keepDimensions_true.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "reduce_l2.https.any.js",
    "reduceL2 float32 4D tensor options.keepDimensions=true",
    "trtx",
    "PASS",
)
